Fixed IE problem with hamburger nav when search is enabled on mobile/tablet.

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/variants/connect/entrypoints/Connect.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/variants/connect/entrypoints/Connect.scss
@@ -1163,6 +1163,10 @@ form button[type=submit]:hover {
     width: $site-logo-width-mobile;
     height: $site-logo-height-mobile;
   }
+
+  #nvcgSlMainNav.searching .mobile-menu-bar .menu-btn {
+    top: 0;
+  }
   #nvcgSlMainNav #swKeyword,
   #nvcgSlMainNav.searching #swKeyword
   {
